--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="br.com.ipostal.reader"
-      android:versionCode="200"
-      android:versionName="2.0">
+      android:versionCode="210"
+      android:versionName="2.1">
 
     <!--
         The application's compatibility with one or more versions of the Android
@@ -62,6 +62,8 @@
         Add this permission to access HW ID.
      -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <!--
       NOTE 1: The setting 'android:launchMode="singleTask"' makes sure
@@ -121,6 +123,11 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
 
+        </activity>
+        
+        <activity android:label="@string/app_name"
+                  android:configChanges="orientation|keyboardHidden|screenSize|smallestScreenSize"
+                  android:name=".DownloadActivity">
         </activity>
 
     </application>
